overflow fixed

--- a/style.css
+++ b/style.css
@@ -9,43 +9,44 @@ body {
     justify-content: center;
     align-items: center;
     font-family: 'Arial', sans-serif;
-    height: 100vh;
+    height: 100%;
 }
 
 #calculator {
     background-color: #071013;
-    padding: 32px;
+    padding: 0 24px;
     border-radius: 12px;
     overflow: hidden;
     max-width: 400px;
+    max-height: 95vh;
 }
 
 #display {
     width: 95%;
     border: none;
-    padding: 20px;
+    padding: 16px;
     text-align: right;
     font-size: 4rem;
     background-color: transparent;
-    
+
 }
 
 #keys {
     display: grid;
     gap: 20px;
     grid-template-columns: repeat(4, 1fr);
-    grid-template-rows: repeat(4, 1fr);
-    grid-template-areas: 
-    "b1 b2 b3 b4"
-    "b5 b6 b7 b8"
-    "b9 b10 b11 b12"
-    "b13 b14 b15 b16"
-    "b17 b17 b18 b16";
+    grid-template-rows: repeat(4);
+    grid-template-areas:
+        "b1 b2 b3 b4"
+        "b5 b6 b7 b8"
+        "b9 b10 b11 b12"
+        "b13 b14 b15 b16"
+        "b17 b17 b18 b16";
 }
 
 button {
     width: 80px;
-    height: 80px;
+    height: 60px;
     border-radius: 8px;
     border: none;
     font-size: 2rem;
@@ -145,7 +146,7 @@ h2 {
 
 .b16 {
     grid-area: b16;
-    height: 180px;
+    height: 136px;
 }
 
 .b17 {
@@ -162,7 +163,7 @@ h2 {
         max-width: 380px;
         padding: 16px;
     }
-    
+
     #display {
         padding: 8px;
     }
@@ -177,7 +178,7 @@ h2 {
         max-width: 350px;
         padding: 8px;
     }
-    
+
     #display {
         padding: 6px;
     }
